--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,22 @@ _ReSharper*
 
 #miscellaneous
 *.log
+
+# NuGet Packages Directory
+packages/
+!packages/repositories.config
+
+##resharper
+_ReSharper*/
+*.[Rr]e[Ss]harper
+
+# Publish Web Output
+*.Publish.xml
+*.pubxml
+
+# Backup & report files from converting an old project file to a newer
+# Visual Studio version. Backup files are not needed, because we have git ;-)
+_UpgradeReport_Files/
+Backup*/
+UpgradeLog*.XML
+UpgradeLog*.htm
