Added functionality to be able to 'Verify' methods were called by introducting the  extension

--- a/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
+++ b/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
@@ -57,6 +57,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="API Tests\AssertMethodTests.cs" />
     <Compile Include="API Tests\ArrangeMethodTests.cs" />
     <Compile Include="Internal Tests\ExpressionArgumentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
