Got a helper method working that takes a member access expression and converts it into an assignment action. This will be useful for implementing the saving of variables in callbacks.

--- a/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
+++ b/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="API Tests\AssertMethodTests.cs" />
     <Compile Include="API Tests\ArrangeMethodTests.cs" />
+    <Compile Include="API Tests\CallbackTests.cs" />
     <Compile Include="Internal Tests\ExpressionArgumentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Testable Interfaces\IPayrollSystem.cs" />
