--- a/Src/ArrangeMock/ArrangeMock.csproj
+++ b/Src/ArrangeMock/ArrangeMock.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IArgumentPassedIn.cs" />
     <Compile Include="Interfaces\IThatAction.cs" />
     <Compile Include="Interfaces\IThatFunction.cs" />
     <Compile Include="MoqExtensions.cs" />
