Cleaned up the Verify tests a bit. Moved a lot of the 'Setup' logic into an nUnit 'Setup' method

--- a/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
+++ b/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
@@ -58,7 +58,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="API Tests\AssertMethodTests.cs" />
+    <Compile Include="API Tests\AssertMethodTestFunction.cs" />
+    <Compile Include="API Tests\AssertMethodTestBase.cs" />
     <Compile Include="API Tests\ArrangeMethodTests.cs" />
     <Compile Include="API Tests\CallbackTestsForFunctions.cs" />
     <Compile Include="API Tests\CallbackTestsForActions.cs" />
