Implemented the verify functionality for actions.

--- a/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
+++ b/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
@@ -58,6 +58,9 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="API Tests\AssertMethodTestAction.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="API Tests\AssertMethodTestFunction.cs" />
     <Compile Include="API Tests\AssertMethodTestBase.cs" />
     <Compile Include="API Tests\ArrangeMethodTests.cs" />
