--- a/Src/ArrangeMock/ArrangeMock.csproj
+++ b/Src/ArrangeMock/ArrangeMock.csproj
@@ -65,13 +65,37 @@
     <Compile Include="Interfaces\IFunctionIsCalled.cs" />
     <Compile Include="Interfaces\ISoThatWhenFunction.cs" />
     <Compile Include="Interfaces\ITimes.cs" />
+    <Compile Include="SoThatWhenFunction.Generated.cs">
+      <DependentUpon>SoThatWhenFunction.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="SoThatWhenAction.cs" />
+    <Compile Include="SoThatWhenAction.Generated.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>SoThatWhenAction.tt</DependentUpon>
+    </Compile>
     <Compile Include="WithAnyArgument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SoThatWhenFunction.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="SoThatWhenFunction.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>SoThatWhenFunction.Generated.cs</LastGenOutput>
+    </None>
+    <None Include="SoThatWhenAction.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>SoThatWhenAction.Generated.cs</LastGenOutput>
+    </None>
+    <None Include="TextTemplatingHelpers.tt">
+      <LastGenOutput>TextTemplatingHelpers.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
