--- a/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
+++ b/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
@@ -58,9 +58,11 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="API Tests\AssertMethodTestActionWithParameters.cs" />
     <Compile Include="API Tests\AssertMethodTestAction.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="API Tests\AssertMethodTestFunctionWithParameters.cs" />
     <Compile Include="API Tests\AssertMethodTestFunction.cs" />
     <Compile Include="API Tests\AssertMethodTestBase.cs" />
     <Compile Include="API Tests\ArrangeMethodTests.cs" />
