--- a/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
+++ b/Src/ArrangeMock.UnitTest/ArrangeMock.UnitTest.csproj
@@ -58,6 +58,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="API Tests\ArrangePropertySetTests.cs" />
+    <Compile Include="API Tests\ArrangePropertyGetTests.cs" />
     <Compile Include="API Tests\AssertMethodTestActionWithParameters.cs" />
     <Compile Include="API Tests\AssertMethodTestAction.cs">
       <SubType>Code</SubType>
@@ -70,7 +72,8 @@
     <Compile Include="API Tests\CallbackTestsForActions.cs" />
     <Compile Include="Internal Tests\ExpressionArgumentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Testable Interfaces\IPayrollSystem.cs" />
+    <Compile Include="Testable Artifacts\IPayrollSystem.cs" />
+    <Compile Include="Testable Artifacts\PaymentGateway.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
